tdf#152154: Crash when Object Catalog undocked and BASIC IDE closed

Change-Id: Ice01e253c135cf1c694afad092aabe46b3150e2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143078
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>